--- a/实例(高级)/60.模板字符串.html
+++ b/实例(高级)/60.模板字符串.html
@@ -6,14 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div>1</div>
-    <div>4</div>
-    <div>3</div>
-    <div>6</div>
-    <div>2</div>
-    <div>5</div>
     <script>
-
+        let name = "张三";
+        let sayHello = `Hello , 我的名字叫 ${name}`;
+        console.log(sayHello);
     </script>
 </body>
 </html>
